--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.wrapper.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/utkast.wrapper.html
@@ -1,4 +1,6 @@
-<div class="webcert-multicol-container webcert-multicol-background-grey" ng-class="{'collapsed' : viewState.common.collapsedHeader}" wc-size-target>
-  <div class="col-sm-6 webcert-col webcert-col-primary" ui-view="utkast"></div>
-  <div class="col-sm-6 webcert-col webcert-col-secondary print-hide" wc-authority feature="hanteraFragor" intygstyp="{{widgetState.certificateType}}" ui-view="fragasvar"></div>
+<div class="webcert-multicol-container1 webcert-multicol-background-grey" ng-class="{'collapsed' : viewState.common.collapsedHeader}" wc-size-target>
+  <div class="webcert-multicol-container2 webcert-multicol-background-white">
+    <div class="webcert-col webcert-col-primary" ui-view="utkast"></div>
+    <div class="webcert-col webcert-col-secondary webcert-multicol-background-grey print-hide" wc-authority feature="hanteraFragor" intygstyp="{{widgetState.certificateType}}" ui-view="fragasvar"></div>
+  </div>
 </div>
