--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_utkast-header.scss
@@ -151,7 +151,8 @@ $header-fix-panel-popover-color: #333;
 }
 
 .intyg-error-panel {
-  margin-top: 100px;
+  margin-top: 40px;
+  margin-left: 40px;
   max-width: 800px;
   .alert-danger {
     border: 1px solid $color_apple_blossom_approx;
