INTYG-3050: Fixade fel som gjorde att intyg inte såg makulerade ut. Tog bort alerts på makulerade intyg.

--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -177,6 +177,13 @@ a {
     .intyg-block h4.intyg-field-number {
         color: $color_silver_chalice_approx;
     }
+    .alert-info {
+        display: none;
+    }
+
+    a {
+        color: $color_silver_chalice_approx;
+    }
 }
 
 
