INTYG-3284: nytt direktiv som justerar höjdens storlek på fritextfält baserat på innehåll

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/css/fk7263.scss
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/css/fk7263.scss
@@ -72,8 +72,9 @@ This is to avoid leaking module specific style rules outside of it's intended co
 
   .edit-form {
     textarea#currentWork.form-control {
-      overflow-y: hidden;
       padding: 2px 4px;
+      overflow-y: hidden;
+      resize: none;
       width: 100%;
     }
   }
