--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form7.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form7.html
@@ -22,7 +22,7 @@
             <span dynamic-label key="DFR_21.2.RBK"></span>
           </p>
           <textarea class="form-control" rows="4" data-ng-model="viewState.intygModel.medvetandestorning.beskrivning"
-                    id="beskrivningMedvetandestorning" wc-maxlength ng-trim="false"
+                    id="beskrivningMedvetandestorning" auto-expand="true" wc-maxlength ng-trim="false"
                     maxlength="{{viewState.inputLimits.medvetandestorning}}"
                     ng-blur="validate()"></textarea>
         </div>
