--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form5.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form5.html
@@ -2,6 +2,8 @@
   <h5>
     <span dynamic-label key="FRG_32.RBK"></span>
   </h5>
-  <textarea class="form-control" ng-model="viewState.intygModel.kommentar" wc-maxlength ng-trim="false" id="kommentar" maxlength="189" rows="6" ng-blur="validate()"></textarea>
+  <textarea class="form-control" ng-model="viewState.intygModel.kommentar"
+            wc-maxlength ng-trim="false" id="kommentar" maxlength="189"
+            rows="6" auto-expand="true" ng-blur="validate()"></textarea>
 </div>
 
