--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form13.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form13.html
@@ -1,8 +1,9 @@
 <div class="">
     <div wc-field field-label="fk7263.label.ovrigt" field-number="13"
          field-help-text="fk7263.helptext.ovrigt" class="print-pagebreak-after">
-                <textarea id="otherInformation" name="otherInformation" rows='10'
-                          class='form-control otherInformation' ng-model="model.kommentar"
+                <textarea id="otherInformation" name="otherInformation" rows="10"
+                          class="form-control otherInformation" auto-expand="true"
+                          ng-model="model.kommentar"
                           ng-change="viewState.limitOtherField('kommentar')"
                           ng-blur="validate()"></textarea>
 
