--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form2.html
@@ -183,7 +183,7 @@
           <label class="control-label"><span message key="fk7263.label.diagnosfortydligande"></span></label>
           <span wc-help-mark field-help-text="fk7263.helptext.diagnos.fortydligande"></span>
         </div>
-        <textarea id="diagnoseClarification" class="form-control" name="diagnose.clarification" rows='5'
+        <textarea id="diagnoseClarification" class="form-control" name="diagnose.clarification" rows="5" auto-expand="true"
                   ng-class="{'fielderror' : viewState.getValidationErrors('diagnosBeskrivning')}"
                   ng-model="model.diagnosBeskrivning" ng-trim="false"
                   ng-change="limitDiagnosBeskrivningField('diagnosBeskrivning')"
