--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8a.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8a.html
@@ -23,7 +23,7 @@
                             <label for="currentWork">Ange aktuella arbetsuppgifter *</label>
 
                             <div class="controls">
-                                <textarea id="currentWork" class="form-control" name="currentWork" rows='2'
+                                <textarea id="currentWork" class="form-control" name="currentWork" rows="2" auto-expand="true"
                                           ng-model="model.nuvarandeArbetsuppgifter" wc-maxlength ng-trim="false"
                                           maxlength="{{viewState.inputLimits.nuvarandeArbetsuppgifter}}"
                                           ng-blur="validate()"></textarea>
