INTYG-3296: Låt alla view-cert.html ha samma id på page title
som LUAE_FS och Fk7263 redan har

--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
         <h1 ng-focus="pagefocus" tabindex="-1">
-          <span message key="lisjp.label.pagetitle"></span>
+          <span id="viewCertificateHeader" message key="lisjp.label.pagetitle"></span>
         </h1>
         <p>
           <div class="mi-text" message key="lisjp.label.pageingress"></div>
