--- a/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
+++ b/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
         <h1 ng-focus="pagefocus" tabindex="-1">
-          <span message key="luse.label.pagetitle"></span>
+          <span id="viewCertificateHeader" message key="luse.label.pagetitle"></span>
         </h1>
         <div class="mi-text" message key="luse.label.pageingress"></div>
 
