--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -42,7 +42,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 mi-text">
         <h1>
-          <message key="ts-bas.label.pagetitle" />
+          <message id="viewCertificateHeader" key="ts-bas.label.pagetitle" />
         </h1>
         <p></p>
         <div class="mi-text" message key="ts-bas.label.pageingress"></div>
