--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -108,7 +108,7 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
         <form id="view-as-pdf" action="{{downloadAsPdfLink}}" method="get" target="_blank" name="pdfForm">
           <p class="btn-row">
-            <button type="button" ng-click="send()" class="btn btn-success"
+            <button id="sendCertificateBtn" type="button" ng-click="send()" class="btn btn-success"
                     title="{{messageService.getProperty('ts-bas.button.send.certificate.title')}}">
               <message key="ts-button.detail.send" />
             </button>
