INTYG-3284: ändrade från auto-expand=“true” till auto-expand

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form4.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form4.html
@@ -11,7 +11,7 @@
     <wc-fmb-help-display related-form-id="FALT4" fmb-states="fmbViewState" field-name="FUNKTIONSNEDSATTNING">
       <wc-validation-wrapper field-type="multi-text"
                              validations="viewState.getValidationErrors('funktionsnedsattning')">
-        <textarea id="disabilities" class="form-control" name="disabilities" rows="6" auto-expand="true"
+        <textarea id="disabilities" class="form-control" name="disabilities" rows="6" auto-expand
                   ng-model="model.funktionsnedsattning" wc-maxlength ng-trim="false"
                   maxlength="{{viewState.inputLimits.funktionsnedsattning}}"
                   ng-blur="validate()"></textarea>
