--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form15.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form15.html
@@ -22,7 +22,7 @@
           <wc-validation-wrapper field-type="multi-text" validations="viewState.getValidationErrors('medicineringBeskrivning')">
             <p><span dynamic-label key="DFR_31.2.RBK"></span> *</p>
             <textarea class="form-control" data-ng-model="viewState.intygModel.medicinering.beskrivning" wc-maxlength ng-trim="false"
-                      id="beskrivningMedicinering" maxlength="{{viewState.inputLimits.medicinering}}" rows="4" auto-expand="true"
+                      id="beskrivningMedicinering" maxlength="{{viewState.inputLimits.medicinering}}" rows="4" auto-expand
                       ng-blur="validate()"></textarea>
           </wc-validation-wrapper>
         </div>
