--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form4.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form4.html
@@ -37,7 +37,7 @@
             <p><span dynamic-label key="DFR_16.2.RBK"></span> *</p>
             <textarea class="form-control" ng-model="viewState.intygModel.hjartKarl.beskrivningRiskfaktorer"
                       wc-maxlength ng-trim="false" maxlength="{{viewState.inputLimits.beskrivningRiskfaktorer}}"
-                      id="beskrivningRiskfaktorer" rows="4" auto-expand="true"
+                      id="beskrivningRiskfaktorer" rows="4" auto-expand
                       ng-blur="validate()"></textarea>
           </wc-validation-wrapper>
         </div>
