--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form6.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form6.html
@@ -2,7 +2,7 @@
   <h5>
     <span dynamic-label key="FRG_34.RBK"></span>
   </h5>
-  <textarea class="form-control" name="specialist" rows="2" id="specialist" auto-expand="true"
+  <textarea class="form-control" name="specialist" rows="2" id="specialist" auto-expand
             ng-model="viewState.intygModel.bedomning.lakareSpecialKompetens"
             wc-maxlength ng-trim="false" maxlength="71" ng-blur="validate()"></textarea>
 </div>
