--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form3.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form3.html
@@ -1,7 +1,7 @@
 <div class="field-fade" ng-hide="viewState.avstangningSmittskydd()">
     <div wc-field field-label="fk7263.label.aktuellt-sjukdomsforlopp" field-number="3"
          field-help-text="fk7263.helptext.aktuellt-sjukdomsforlopp">
-                <textarea id="diseaseCause" class="form-control" name="diseaseCause" rows="5" auto-expand="true"
+                <textarea id="diseaseCause" class="form-control" name="diseaseCause" rows="5" auto-expand
                           ng-blur="validate()"
                           ng-model="model.sjukdomsforlopp"
                           wc-maxlength ng-trim="false"
