--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form17.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form17.html
@@ -41,6 +41,6 @@
   <p><span dynamic-label key="FRG_34.RBK"></span></p>
   <textarea name="specialist" class="form-control" rows="4"
             id="specialist" ng-model="viewState.intygModel.bedomning.lakareSpecialKompetens" wc-maxlength ng-trim="false"
-            maxlength="{{viewState.inputLimits.lakareSpecialKompetens}}" auto-expand="true"
+            maxlength="{{viewState.inputLimits.lakareSpecialKompetens}}" auto-expand
             ng-blur="validate()"></textarea>
 </div>
