INTYG-3392: TS-intyg visar nu info meddelanden i djupintegration + låser adressfält

--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/patient.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/patient.html
@@ -9,7 +9,8 @@
             <input type="text" class="form-control input-full" id="patientPostadress"
                    name="viewState.intygModel.grundData.patient.postadress"
                    ng-model="viewState.intygModel.grundData.patient.postadress" maxlength="50" wc-focus-on="focusFirstInput"
-                   ng-blur="validate()">
+                   ng-blur="validate()"
+                   ng-disabled="userModel.isDjupintegration()">
           </div>
         </div>
       </wc-validation-wrapper>
@@ -23,7 +24,8 @@
             <input type="text" class="form-control input-5" id="patientPostnummer"
                    name="viewState.intygModel.grundData.patient.postnummer"
                    ng-model="viewState.intygModel.grundData.patient.postnummer" maxlength="6"
-                   ng-blur="validate()">
+                   ng-blur="validate()"
+                   ng-disabled="userModel.isDjupintegration()">
           </div>
         </div>
       </wc-validation-wrapper>
@@ -36,7 +38,8 @@
           <div class="col-md-10">
             <input type="text" class="form-control" id="patientPostort" name="viewState.intygModel.grundData.patient.postort"
                    ng-model="viewState.intygModel.grundData.patient.postort" maxlength="25"
-                   ng-blur="validate()">
+                   ng-blur="validate()"
+                   ng-disabled="userModel.isDjupintegration()">
           </div>
         </div>
       </wc-validation-wrapper>
