--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/patient.html
@@ -7,7 +7,12 @@
         <label class="col-md-2 control-label"><span message key="ts-diabetes.form.postadress"></span> *</label>
         <div class="col-md-10">
           <input type="text" class="form-control input-full" id="patientPostadress"
-                 name="viewState.intygModel.grundData.patient.postadress" ng-model="viewState.intygModel.grundData.patient.postadress" maxlength="50" wc-focus-on="focusFirstInput" ng-change="validate()">
+                 name="viewState.intygModel.grundData.patient.postadress"
+                 ng-model="viewState.intygModel.grundData.patient.postadress"
+                 maxlength="50"
+                 wc-focus-on="focusFirstInput"
+                 ng-blur="validate()"
+                 ng-disabled="userModel.isDjupintegration()">
         </div>
       </div>
     </wc-validation-wrapper>
@@ -19,7 +24,11 @@
         <label class="col-md-2 control-label"><span message key="ts-diabetes.form.postnummer"></span> *</label>
         <div class="col-md-10">
           <input type="text" class="form-control input-5" id="patientPostnummer"
-                 name="viewState.intygModel.grundData.patient.postnummer" ng-model="viewState.intygModel.grundData.patient.postnummer" maxlength="6" ng-change="validate()">
+                 name="viewState.intygModel.grundData.patient.postnummer"
+                 ng-model="viewState.intygModel.grundData.patient.postnummer"
+                 maxlength="6"
+                 ng-blur="validate()"
+                 ng-disabled="userModel.isDjupintegration()">
         </div>
       </div>
     </wc-validation-wrapper>
@@ -31,7 +40,10 @@
         <label class="col-md-2 control-label"><span message key="ts-diabetes.form.postort"></span> *</label>
         <div class="col-md-10">
           <input type="text" class="form-control" id="patientPostort" name="viewState.intygModel.grundData.patient.postort"
-                 ng-model="viewState.intygModel.grundData.patient.postort" maxlength="25" ng-change="validate()">
+                 ng-model="viewState.intygModel.grundData.patient.postort"
+                 maxlength="25"
+                 ng-blur="validate()"
+                 ng-disabled="userModel.isDjupintegration()">
         </div>
       </div>
     </wc-validation-wrapper>
@@ -41,7 +53,8 @@
     <div class="row">
       <label class="col-md-2 control-label"></label>
       <div class="col-md-10">
-      <wc-utkast-patient-address-updater patient-model="viewState.intygModel.grundData.patient" form="certForm"></wc-utkast-patient-address-updater>
+        <wc-utkast-patient-address-updater patient-model="viewState.intygModel.grundData.patient" form="certForm"></wc-utkast-patient-address-updater>
+      </div>
     </div>
   </div>
 </div>
