--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
@@ -79,19 +79,23 @@
 	            <button type="button" id="sendCertificateBtn" type="button" ng-click="send()" class="btn btn-success" title="{{messageService.getProperty('fk7263.button.send.certificate.title')}}">
 	              <span message key="fk7263.button.send.certificate"></span>
 	            </button>
-              <button id="customizeCertificateBtn" type="button" ng-click="customizeCertificate()" class="btn btn-primary" title="{{messageService.getProperty('fk7263.button.customize.certificate.title')}}">
+              <button type="button" id="customizeCertificateBtn" ng-click="customizeCertificate()" class="btn btn-primary" title="{{messageService.getProperty('fk7263.button.customize.certificate.title')}}">
                 <span message key="fk7263.button.customize.certificate"></span>
               </button>
-	            <button id="downloadprint" type="submit" ng-click="document.pdfForm.submit()" class="btn btn-inverse">
+	            <button type="submit" id="downloadprint" ng-click="document.pdfForm.submit()" class="btn btn-inverse">
 	              <span message key="modules.button.save.as.pdf"></span>
 	            </button>
+              <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.alt.archive')}}">
+                <span message key="button.archive"></span>
+              </button>
 	          </p>
 	        </form>
 	    </div>
     </div>
 
     <div id="certificate" class="certificate">
-      <span class="hide" id="certId" title="{{cert.id}}"></span>&nbsp;<span class="hide" id="certType" title="fk7263"></span>
+      <span class="hide" id="certId" title="{{cert.id}}"></span>
+      <span class="hide" id="certType" title="fk7263"></span>
 
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -105,17 +109,11 @@
                     <span>{{moduleService.getModuleName(cert.typ)}}</span>
                   </h2>
                 </div>
-                <div class="col-xs-4 col-sm-4 col-md-3 col-lg-3 issue">
+                <div class="col-xs-6 col-sm-5 col-md-4 col-lg-4 issue text-right">
                   <span class="cert-titlebar-value">{{cert.grundData.signeringsdatum | date:'shortDate'}}</span>
                   <span>
                     <span message key="fk7263.label.issued"></span>
                   </span>
-                </div>
-				        <div class="col-xs-2 col-sm-1 col-md-1 col-lg-1 archive hidden-xs">
-                  <a role="button" data-toggle="modal" id="archiveBtn" title="{{messageService.getProperty('modules.button.alt.archive')}}" ng-click="openArchiveDialog(cert)">
-                    <span class="glyphicon glyphicon-folder-close white"></span>
-					          <!-- <img alt="Arkivera intyg" src="/img/archive-icon.gif" /> -->
-                  </a>
                 </div>
               </div>
             </div>
@@ -171,13 +169,6 @@
                     <span message key="fk7263.label.issuer"></span>
                   </h3>
                   <span id="caregiver">{{cert.grundData.skapadAv.vardenhet.vardgivare.vardgivarnamn}}</span>
-                </div>
-              </div>
-              <div class="row ">
-                <div class="col-xs-12 hidden-sm hidden-md hidden-lg header-row">
-           		  <button type="button" class="btn btn-primary pull-right" ata-toggle="modal" title="{{messageService.getProperty('button.alt.archive')}}" ng-click="openArchiveDialog(cert)">
-             		<span class="glyphicon glyphicon-folder-close white"></span>
-             	  </button>
                 </div>
               </div>
             </div>
