INTYG-3470: Uppdatering av texter i Mina intyg

--- a/fk/luae_na/src/main/resources/META-INF/resources/webjars/luae_na/minaintyg/views/view-cert.html
+++ b/fk/luae_na/src/main/resources/META-INF/resources/webjars/luae_na/minaintyg/views/view-cert.html
@@ -83,7 +83,7 @@
 	            <button id="downloadprint" type="submit" ng-click="document.pdfForm.submit()" class="btn btn-inverse">
 	              <span message key="modules.button.save.as.pdf"></span>
 	            </button>
-              <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.alt.archive')}}">
+              <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.archive.tooltip')}}">
                 <span message key="button.archive"></span>
               </button>
 	          </p>
@@ -149,7 +149,7 @@
               </div>
               <div class="row ">
                 <div class="col-xs-12 hidden-sm hidden-md hidden-lg header-row">
-           		  <button type="button" class="btn btn-primary pull-right" ata-toggle="modal" title="{{messageService.getProperty('button.alt.archive')}}" ng-click="openArchiveDialog(cert)">
+           		  <button type="button" class="btn btn-primary pull-right" ata-toggle="modal" title="{{messageService.getProperty('button.archive.tooltip')}}" ng-click="openArchiveDialog(cert)">
              		<span class="glyphicon glyphicon-folder-close white"></span>
              	  </button>
                 </div>
