--- a/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
+++ b/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
@@ -76,7 +76,7 @@
             <button id="downloadprint" type="submit" class="btn btn-inverse" ng-click="document.pdfForm.submit()">
               <span message key="modules.button.save.as.pdf"></span>
             </button>
-            <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.alt.archive')}}">
+            <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.archive.tooltip')}}">
               <span message key="button.archive"></span>
             </button>
           </p>
