--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -114,7 +114,7 @@
             <button type="submit" id="downloadprint" ng-click="document.pdfForm.submit()" class="btn btn-inverse">
               <message key="modules.button.save.as.pdf" />
             </button>
-            <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.alt.archive')}}">
+            <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.archive.tooltip')}}">
               <span message key="button.archive"></span>
             </button>
           </p>
