--- a/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
+++ b/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
@@ -83,7 +83,7 @@
 	            <button id="downloadprint" type="submit" ng-click="document.pdfForm.submit()" class="btn btn-inverse">
 	              <span message key="modules.button.save.as.pdf"></span>
 	            </button>
-              <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.alt.archive')}}">
+              <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.archive.tooltip')}}">
                 <span message key="button.archive"></span>
               </button>
 	          </p>
