--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
@@ -85,7 +85,7 @@
 	            <button type="submit" id="downloadprint" ng-click="document.pdfForm.submit()" class="btn btn-inverse">
 	              <span message key="modules.button.save.as.pdf"></span>
 	            </button>
-              <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.alt.archive')}}">
+              <button type="button" id="archiveCertificateBtn" ng-click="openArchiveDialog(cert)" class="btn btn-inverse" title="{{messageService.getProperty('button.archive.tooltip')}}">
                 <span message key="button.archive"></span>
               </button>
 	          </p>
@@ -172,8 +172,6 @@
                 </div>
               </div>
             </div>
-
-            <div class="table-bottom"></div>
 
             <div class="intyg-body">
 
