GUIFIX: Genomgång av utseende LISJP. Rester samlade i jiror.

--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form1.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form1.html
@@ -133,7 +133,7 @@
           <span dynamic-label key="FRG_9.RBK"></span>
         </label>
 
-        <div class="alert alert-info" ng-show="viewState.intygModel.syn.korrektionsglasensStyrka == true">
+        <div class="alert alert-warning" ng-show="viewState.intygModel.syn.korrektionsglasensStyrka == true">
           <span dynamic-label key="FRG_9.INF"></span>
         </div>
 
