--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -366,6 +366,11 @@
     cursor: default;
   }
 
+  .required {
+    color: $color_radical_red_approx;
+    font-size: 14px;
+  }
+
   input[type=radio] {
     margin-top: 3px;
     cursor: pointer;
@@ -914,3 +919,4 @@ wc cookie banner css.
 .forward-inactive {
   color: black;
 }
+
