INTYG-3318: Show answer and link to intyg that completed this one.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -139,6 +139,11 @@ $font-3: sans-serif;
   &:hover {
     color: $btn-link-hover-color;
   }
+
+  &__purelink {
+    padding: 0;
+    margin: -1px;
+  }
 }
 
 .btn-inverse {
