--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -308,8 +308,17 @@ $font-3: sans-serif;
   padding-bottom: 15px;
 }
 
+.form-group:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
 .form-group--small-gap {
   padding-bottom: 5px;
+}
+
+.radio:last-child, .checkbox:last-child {
+  margin-bottom: 0;
 }
 
 /* ---------------------------------------
