INTYG-3504: Fixar uppåtscroll vid klick signera utkast / visa vad som saknas

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -207,6 +207,13 @@
   .utkast-footer {
     margin-bottom: 50px;
   }
+  .fixed-bottom {
+    position: fixed;
+    bottom: 0;
+    background: #fff;
+    width: 45%;
+    padding-bottom: 20px;
+  }
 
   p {
     margin: 0;
