INTYG-3507: saknad måsvinge för fk7263 "baseras på förra intygets sista giltighetsdag" template

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
@@ -180,7 +180,7 @@
               field8b.lastEffectiveDateNotice.isVisible &&
               field8b.lastEffectiveDateNotice.value == 'nedsattMed75'">
               <uib-alert id="nedsattMed75Alert" type="info" close="field8b.lastEffectiveDateNotice.hide()">
-                {lastEffectiveDateNoticeText}}
+                {{lastEffectiveDateNoticeText}}
               </uib-alert>
             </div>
             <div class="indent pad10" ng-if="field8b.nedsattMed75.workState">
