--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/view/sjukskrivningView.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/view/sjukskrivningView.directive.html
@@ -1,5 +1,19 @@
-<div class="row">
-  <div data-ng-repeat="grad in grader">
+<div>
+  <table class="table table-striped">
+    <tr data-ng-repeat="grad in grader"
+        ng-show="fieldModel[sjukskrivningView.key][grad] || fieldModel[sjukskrivningView.key][grad]">
+      <td>
+        <span id="{{sjukskrivningView.key}}-{{grad}}-grad" dynamic-label
+              key="{{sjukskrivningView.templateOptions.code}}.{{fieldModel[sjukskrivningView.key][grad].sjukskrivningsgrad}}.RBK"></span>
+      </td>
+      <td>
+        från och med <strong><span id="{{sjukskrivningView.key}}-{{grad}}-from">{{fieldModel[sjukskrivningView.key][grad].period.from}}</span></strong>
+        till och med <strong><span id="{{sjukskrivningView.key}}-{{grad}}-tom">{{fieldModel[sjukskrivningView.key][grad].period.tom}}</span></strong>
+      </td>
+    </tr>
+  </table>
+<!--
+  <div class="even-color" data-ng-repeat="grad in grader">
     <div ng-show="fieldModel[sjukskrivningView.key][grad] || fieldModel[sjukskrivningView.key][grad]">
       <div class="col-md-4">
         <span id="{{sjukskrivningView.key}}-{{grad}}-grad" dynamic-label
@@ -11,4 +25,5 @@
       </div>
     </div>
   </div>
+  -->
 </div>
