--- a/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
+++ b/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
@@ -28,40 +28,7 @@
         </button>
       </div>
       <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
-        <h2>
-          <span message key="luse.label.latestevent"></span>
-        </h2>
-
-        <!-- Show if no events to show -->
-        <div ng-show="cert.filteredStatuses.length<1">
-          <p>
-            <span message key="luse.label.latestevent.noevents"></span>
-          </p>
-        </div>
-
-        <!-- Show if more than one event exists -->
-        <div ng-show="cert.filteredStatuses.length>0" id="latest-certificate-event">
-          <span message key="luse.status.{{cert.filteredStatuses[0].type}}"></span>
-          <span message key="luse.target.{{cert.filteredStatuses[0].target}}"></span><span>s system</span>
-          <span
-              class="certificate-event-timestamp pull-right">{{cert.filteredStatuses[0].timestamp | date:'short'}}</span>
-          <div collapse="!isCollapsedCertEvents" class="collapse">
-            <div ng-repeat="status in cert.filteredStatuses" ng-switch on="$index > 0">
-              <div ng-switch-when="true">
-                <span message key="luse.status.{{cert.filteredStatuses[0].type}}"></span>
-                <span ng-show="status.type == 'SENT'">
-                  <span message key="luse.target.{{cert.filteredStatuses[0].target}}"></span>s system</span>
-                <span class="certificate-event-timestamp pull-right">{{status.timestamp | date:'short'}}</span><br>
-              </div>
-            </div>
-          </div>
-          <p>
-            <button type="button" class="btn-link btn-link-link" ng-show="cert.filteredStatuses.length>1"
-                    ng-click="isCollapsedCertEvents = !isCollapsedCertEvents" data-toggle="collapse">
-              <span message key="luse.label.showevents.{{!isCollapsedCertEvents}}"></span>
-            </button>
-          </p>
-        </div>
+        <latest-events cert-id="{{cert.id}}" statuses="cert.filteredStatuses"></latest-events>
       </div>
     </div>
     <div class="row">
