--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
@@ -38,37 +38,7 @@
         </p>
       </div>
       <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
-        <h2>
-          <span message key="fk7263.label.latestevent"></span>
-        </h2>
-
-        <!-- Show if no events to show -->
-        <div ng-show="cert.filteredStatuses.length<1">
-        	<p>
-        		<span message key="fk7263.label.latestevent.noevents"></span>
-        	</p>
-        </div>
-
-		<!-- Show if more than one event exists -->
-   		  <div ng-show="cert.filteredStatuses.length>0" id="latest-certificate-event">
-            <span message key="fk7263.status.{{cert.filteredStatuses[0].type}}"></span>
-            <span message key="fk7263.target.{{cert.filteredStatuses[0].target}}"></span><span>s system</span>
-            <span class="certificate-event-timestamp pull-right">{{cert.filteredStatuses[0].timestamp | date:'short'}}</span>
-            <div uib-collapse="!isCollapsedCertEvents" class="collapse">
-              <div ng-repeat="status in cert.filteredStatuses" ng-switch on="$index > 0">
-                <div ng-switch-when="true">
-                  <span message key="fk7263.status.{{cert.filteredStatuses[0].type}}"></span>
-                  <span ng-show="status.type == 'SENT'"><span message key="fk7263.target.{{cert.filteredStatuses[0].target}}"></span>s system</span>
-                  <span class="certificate-event-timestamp pull-right">{{status.timestamp | date:'short'}}</span><br>
-                </div>
-              </div>
-            </div>
-            <p>
-              <button type="button" class="btn-link btn-link-link" ng-show="cert.filteredStatuses.length>1" ng-click="isCollapsedCertEvents = !isCollapsedCertEvents" data-toggle="collapse">
-                <span message key="fk7263.label.showevents.{{!isCollapsedCertEvents}}"></span>
-              </button>
-            </p>
-        </div>
+        <latest-events cert-id="{{cert.id}}" statuses="cert.filteredStatuses"></latest-events>
       </div>
     </div>
 
