--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
@@ -68,38 +68,7 @@
 
       </div>
       <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
-        <h2>
-          <span message key="ts-diabetes.label.latestevent"></span>
-        </h2>
-
-        <!-- Show if no events to show -->
-        <div ng-show="cert.status.length<1">
-          <p>
-            <span message key="ts-diabetes.label.latestevent.noevents"></span>
-          </p>
-        </div>
-
-        <!-- Show if more than one event exists -->
-        <div ng-show="cert.status.length>0" id="latest-certificate-event">
-          <span message key="ts-diabetes.status.{{cert.status[0].type}}"></span>
-          <span message key="ts-diabetes.target.{{cert.status[0].target}}"></span><span>s system</span>
-          <span class="certificate-event-timestamp pull-right">{{cert.status[0].timestamp | date:'short'}}</span>
-          <div uib-collapse="!isCollapsedCertEvents" class="collapse">
-            <div ng-repeat="status in cert.status" ng-switch on="$index > 0">
-              <div ng-switch-when="true">
-                <span message key="ts-diabetes.status.{{cert.status[0].type}}"></span>
-                <span message key="ts-diabetes.target.{{cert.status[0].target}}"></span><span>s system</span>
-                <span class="certificate-event-timestamp pull-right">{{status.timestamp | date:'short'}}</span><br>
-              </div>
-            </div>
-          </div>
-          <p>
-            <button type="button" class="btn-link btn-link-link" ng-show="cert.status.length>1"
-                    ng-click="isCollapsedCertEvents = !isCollapsedCertEvents" data-toggle="collapse">
-              <span message key="ts-diabetes.label.showevents.{{!isCollapsedCertEvents}}"></span>
-            </button>
-          </p>
-        </div>
+        <latest-events cert-id="{{cert.id}}" statuses="cert.status"></latest-events>
       </div>
     </div>
 
